# pm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: AGENTS.md  Containerfile  check_endpoints.py  pyproject.toml
backend/app/: ai_client.py  board_ai.py  main.py  persistence.py  schemas.py
backend/tests/: test_board_ai.py  test_main.py
docs/: PLAN.md  code_review.md  database-schema.json
frontend/: AGENTS.md  README.md  package-lock.json  package.json  playwright.local.config.ts
frontend/src/app/: page.test.tsx  page.tsx
frontend/src/components/: AIChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LoginForm.tsx
frontend/src/lib/: api.ts  kanban.ts
frontend/tests/: kanban.spec.ts  persistence.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
